# k-shortest-path

./: .gitignore  CMakeLists.txt  Readme.md  build.sh  run-all-tests.sh
benchmarks/: CMakeLists.txt  DistanceToBucket.cpp  DynamicGraphOutEdges.cpp
experiments/: CMakeLists.txt
experiments/code/: CollectStatisticalData.cpp  PerformanceMeasurements.cpp  SingleThreadPerformance.cpp
experiments/data/: runtimes.7z
experiments/evaluation/: Runtimes.ipynb  ksp-analysis.ipynb
src/: BFSTree.h  DeltaStepping.h  Dijkstra.h  DynamicGraph.h  Graph.h  KIM.h  KSPAlgorithm.h  KspBasics.h  PriorityQueue.h  SpecialGraphs.h  SsspTree.h  YellowGraph.h
src/concepts/: graph.h  sssp.h
src/tools/: GraphGenerator.h  GraphRW.h  KspRunner.h  Output.h  Statistics.h  Timer.h
tests/: CMakeLists.txt  CandidateListTests.cpp  DeltaSteppingTest.cpp  DijkstraTest.cpp  DynamicGraphTest.cpp  GraphRWTest.cpp  GraphTest.cpp  KSPTests.cpp  PriortyQueueTest.cpp  SSSPTreeTest.cpp  StatsTests.cpp  TimerTest.cpp
tests/data/: directed-graph-small.metis  tiny_gnp.metis
tools/: CMakeLists.txt  convert.cpp  generator.cpp
